[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kernel"
test = true
bench = false

[[test]]
name = "should_panic"
harness = false

[dependencies]
bootloader = "0.9"
spin = "0.5.2"
volatile = "0.2.6"
lazy_static = { version = "1.0", features = ["spin_no_std"]}
x86_64 = "0.15.2"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33
test-timeout = 300
