[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kernel"
test = true
bench = false

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false


[dependencies]
# map_physical_memory literally maps the complete physical memory for the
# kernel to be able to read it.
bootloader = { version = "0.9", features = ["map_physical_memory"] }
spin = "0.5.2"
volatile = "0.2.6"
lazy_static = { version = "1.0", features = ["spin_no_std"]}
x86_64 = "0.14.2"
bitmap = { version = "0.1.0", path = "bitmap" }
pic8259 = "0.11.0"
pc-keyboard = "0.7.0"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33
test-timeout = 300
